--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,9 @@
 /* Body styling */
 body {
   background: #713e94;
-  color: #fff;
+  color: #ff5733;
   font-family: Helvetica, Arial;
-  font-size: 27px;
+  font-size: 25px;
   font-weight: 300;
   line-height: 1.65em;
   margin: 0 auto;
@@ -15,7 +15,7 @@ body {
 /* Heading Styles */
 h1 {
   font-size: 60px;
-  color: #fff;
+  color: #ffD1DC;
   text-align: center;
 }
 
